# flat-mcp-client

./: README.md  pyproject.toml  pyrightconfig.json
src/flat_mcp_client/: __init__.py  agents.py  models.py  stats.py  tools.py
src/flat_mcp_client/io/: terminal_io.py  ui.py
src/flat_mcp_client/prompts/: default.py
src/flat_mcp_client/tool_defs/: __init__.py  crawl4ai.py  geolocal_info.py
