[project]
name = "flat-mcp-client"
version = "0.1.0"
description = "Fast Local Agents with Tools (mcp-client edition) is a lightweight package for connecting local (self-hosted) LLMs to tooling+data and for prototyping agentic flows"
readme = "README.md"
authors = [
    { name = "Stefan Witwicki", email = "stefan@witwicki.info" }
]
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.5.3",
    "openai>=1.106.1",
    "rich>=14.1.0",
]

[project.scripts]
flat = "flat_mcp_client.agents:main_sync_entry_point"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
