[project]
name = "flat-mcp-client"
version = "0.1.0"
description = "Fast Local Agents with Tools (mcp-client edition) is a lightweight package for connecting local (self-hosted) LLMs to tooling+data and for prototyping agentic flows"
readme = "README.md"
authors = [
    { name = "Stefan Witwicki", email = "stefan@witwicki.info" }
]
requires-python = ">=3.10"
dependencies = [
    "cyclopts>=3.24.0",
    "fastmcp>=2.12.3",
    "geopy>=2.4.1",
    "huggingface-hub>=0.35.1",
    "humanize>=4.13.0",
    "llama-cpp-python>=0.3.16",
    "ollama>=0.5.3",
    "openai>=1.106.1",
    "platformdirs>=4.4.0",
    "requests>=2.32.5",
    "requests-cache>=1.2.1",
    "rich>=14.1.0",
    "timezonefinder>=8.1.0",
    "transformers>=4.56.2",
    "urllib3>=2.5.0",
    "urllib3-future>=2.13.909",
]

[project.scripts]
flat = "flat_mcp_client.agents:app"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
